common config changes

--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -31,12 +31,12 @@ GlobalUniqueIdentifierPrefix=MyGroup:MyStudy:
 
 
 #whether to display and allow adoptions - set to true for yes and false for no
-allowAdoptions = false
+allowAdoptions = true
 
 #email addresses and parameters
 sendEmailNotifications=false
-autoEmailAddress=info@flukebook.org
-newSubmissionEmail=donotreply@flukebook.org
+autoEmailAddress=donotreply@finprinting.org
+newSubmissionEmail=donotreply@finprinting.org
 mailHost=localhost
 removeEmailString=Do you want to REMOVE your email address from this database? Click the link below to remove it. You will no longer receive updates on your encounters.
 
@@ -45,8 +45,8 @@ cssURLLocation=css/ecocean.css
 htmlShortcutIcon=images/favicon.ico
 htmlAuthor=IBEIS.org - Wildbook
 htmlDescription=Wildbook helps you study, identify and protect wildlife populations!
-htmlKeywords = IBEIS,citizen science, zebras, giraffes
-htmlTitle=Wildbook
+htmlKeywords = IBEIS,citizen science
+htmlTitle=Wildbook Test
 
 #URL to the graphic to be displayed at the top of every page through header.jsp
 #urlToMastheadGraphic=/${pom.artifactId}-${pom.version}/images/masthead.jpg
@@ -61,12 +61,12 @@ googleSearchKey=YOUR_KEY_HERE
 
 #Pattern matching configuration
 useSpotPatternRecognition=true
-useModifiedGroth = false
+#useModifiedGroth = false
 #algorithms = ModifiedGroth, I3S
-algorithms = I3S,HolmbergIntersection,FastDTW
+#algorithms = I3S,HolmbergIntersection,FastDTW
 
-patternMatchingEndPointServletName = WriteOutFlukeMatchingJSON
-patternMatchingResultsPage = encounters/flukeScanEndApplet.jsp
+#patternMatchingEndPointServletName = WriteOutFlukeMatchingJSON
+#patternMatchingResultsPage = encounters/flukeScanEndApplet.jsp
 
 #Modified Groth algorithm parameters for spot pattern recognition
 R=8
@@ -84,22 +84,11 @@ catalogCode=Your_Code
 kingdom=ANIMALIA
 phylum=CHORDATA
 class=CHONDRICHTHYES
-order=	RAJIFORMES
-family=MOBULIDAE
-genus=whichGenus
-species=whichSpecies
+order=LAMNIFORMES
+family=LAMNIDAE
+genus=CARCHARODON
+species=CARCHARIAS
 
-
-
-
-#Pattern matching configuration
-useSpotPatternRecognition=true
-useModifiedGroth = false
-#algorithms = ModifiedGroth, I3S
-algorithms = ModifiedGroth,I3S,HolmbergIntersection,FastDTW
-
-patternMatchingEndPointServletName = WriteOutFlukeMatchingJSON
-patternMatchingResultsPage = encounters/flukeScanEndApplet.jsp
 
 
 #nicknames
@@ -121,13 +110,13 @@ showEXIF = true
 showTaxonomy = true
 
 #for multi-species libraries, fill out the genus and species for each supported animal type, starting with genusSpecies0
-genusSpecies0=Physeter macrocephalus
-genusSpecies1=Balaenoptera musculus
-genusSpecies2=Megaptera novaeangliae
-genusSpecies3=Balaenoptera acutorostrata
-genusSpecies4=Balaenoptera physalus
-genusSpecies5=Stenella attenuata
-genusSpecies6=Tursiops truncatus
+genusSpecies0=Carcharodon carcharias
+#genusSpecies1=Balaenoptera musculus
+#genusSpecies2=Megaptera novaeangliae
+#genusSpecies3=Balaenoptera acutorostrata
+#genusSpecies4=Balaenoptera physalus
+#genusSpecies5=Stenella attenuata
+#genusSpecies6=Tursiops truncatus
 
 #defined sexes
 sex0=unknown
@@ -142,7 +131,7 @@ genusSpeciesColor0=00FF00
 genusSpeciesColor1=00FFFF
 
 #show lifeStage
-showLifestage = true
+showLifestage = false
 
 #defined life stages
 lifeStage0=unknown
@@ -175,14 +164,17 @@ patterningCode14 = 1
 showMeasurements = true
 
 #Measurements
-measurement0=WaterTemperature
-measurementUnits0=Celsius
-measurement1=Salinity
-measurementUnits1=nounits
+measurement0=length
+measurementUnits0=centimeters
+#measurement1=Salinity
+#measurementUnits1=nounits
 
 
 #Sampling Protocol for Measurements
-samplingProtocol0=directly measured
+samplingProtocol0=personalGuess
+samplingProtocol1=directlyMeasured
+samplingProtocol2=stereoPhotogrammetry
+samplingProtocol3=laserPhotogrammetry
 
 
 #show elevation/depth
@@ -224,9 +216,11 @@ encounterStateCSSClass2=unidentifiable_encounters
 
 #limit Encounter.locationID to these values
 
-locationID0 = Study Site 1
-locationID1 = Study Site 2
-locationID2 = Study Site 3
+locationID0 = S.A., Dyer Island
+locationID1 = S.A., False Bay, Inshore
+locationID1 = S.A., False Bay, Seal Island
+locationID2 = S.A., Mossel Bay
+locationID3 = S.A., Algoa Bay
 
 
 #whether to show country field as a location
@@ -353,13 +347,13 @@ relationshipRole2 = calf
 defaultLanguage = en
 
 language0 = en
-language1 = es
+#language1 = es
 #language2 = fr
 #language3 = de
 
 
 en = English
-es = espa\u00f1ol
+#es = espa\u00f1ol
 #fr = fran&#231;ais
 #silo security
 collaborationSecurityEnabled = true
@@ -417,11 +411,11 @@ IBEISIARestUrlGetJobResult = http://52.36.181.189:5000/api/engine/job/result/
 # s3upload_region = CHANGEME
 # s3upload_bucket = CHANGEME
 
-#BenWhitesharkJobStartDirectory = /efs/job/start
-#BenWhitesharkJobResultsDirectory = /efs/job/results
+
+
+BenWhitesharkJobStartDirectory = /efs/job/start
+BenWhitesharkJobResultsDirectory = /efs/job/results
 ##### the below is useful for when the IA VM has a different path (like a common mountpoint) than the WB MediaAsset has as .localPath()
 #####   gets used in a .replace(regex, value) call if these are set
-#BenWhitesharkMediaAssetPathReplaceRegex = FOO
-#BenWhitesharkMediaAssetPathReplaceValue = BAR
-
-
+BenWhitesharkMediaAssetPathReplaceRegex = /var/lib/tomcat7/webapps
+BenWhitesharkMediaAssetPathReplaceValue = /efs
