--- a/src/main/resources/bundles/en/commonConfigurationLabels.properties
+++ b/src/main/resources/bundles/en/commonConfigurationLabels.properties
@@ -9,14 +9,17 @@ discwidth.label = Disc width
 Celsius.label = Celsius
 Salinity.label = Salinity
 WaterTemperature.label = Water Temperature
- 
+
 kilograms.label=Kilograms
 meters.label=Meters
 ppm.label=ppm
-nounits= 
+nounits=
 
 
-samplingProtocol0.label=Directly Measured
+samplingProtocol0.label=Estimated
+samplingProtocol1.label=Directly Measured
+samplingProtocol2.label=Stereo Photogrammetry
+samplingProtocol3.label=Laser Photogrammetry
 
 left.label=Left
 right.label=Right
