secured rest api

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -113,7 +113,8 @@
                 /individualSearchResults.jsp = authc
                 /individuals.jsp = authc
                 /encounters/** =  authc
-
+                /api/** = authcBasicWildbook, roles[rest]
+                /rest/** = authcBasicWildbook, roles[rest]
 
 
 			    /RelationshipCreate  = authc, roles[researcher]
