--- a/src/main/resources/bundles/en/encounter.properties
+++ b/src/main/resources/bundles/en/encounter.properties
@@ -25,6 +25,7 @@ title = Encounter
 identified_as = Identified as:
 workflowState = Workflow state:
 setWorkflowState = Set Workflow State
+setAlternateCatalogNumber = Set Alternate Catalog Number
 matched_by = Matched by
 status = Status
 alternate_id = Alternate ID
@@ -280,5 +281,3 @@ jspImport0=flukeMatchingAlgorithm2.jsp
 #imgWatermark=Unauthorised copying not permitted
 
 matchPattern = Match Pattern
-
-
