--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -601,6 +601,11 @@
   </servlet>
 
       <servlet>
+        <servlet-name>EncounterSetAlternateCatalogNumber</servlet-name>
+        <servlet-class>org.ecocean.servlet.EncounterSetAlternateCatalogNumber</servlet-class>
+      </servlet>
+
+      <servlet>
         <servlet-name>TissueSampleRemoveSexAnalysis</servlet-name>
         <servlet-class>org.ecocean.servlet.TissueSampleRemoveSexAnalysis</servlet-class>
   </servlet>
@@ -1774,6 +1779,11 @@
   <servlet-mapping>
     <servlet-name>EncounterSetAlternateID</servlet-name>
     <url-pattern>/EncounterSetAlternateID</url-pattern>
+  </servlet-mapping>
+
+  <servlet-mapping>
+    <servlet-name>EncounterSetAlternateCatalogNumber</servlet-name>
+    <url-pattern>/EncounterSetAlternateCatalogNumber</url-pattern>
   </servlet-mapping>
 
     <servlet-mapping>
