--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -112,7 +112,8 @@
 
                 /individualSearchResults.jsp = authc
                 /individuals.jsp = authc
-                #/encounters/** =  authc
+                /encounters/thumbnailSearchResults.jsp = authc
+                /encounters/encounter.jsp = authc
                 /api/** = authcBasicWildbook, roles[rest]
                 /rest/** = authcBasicWildbook, roles[rest]
 
