--- a/src/main/resources/bundles/en/encounterSearch.properties
+++ b/src/main/resources/bundles/en/encounterSearch.properties
@@ -43,6 +43,7 @@ additionalComments = Observation comments include string:
 namesBlank = Leave blank to accept all names in your search. This field IS NOT case-sensitive.
 commentsBlank = Leave blank to ignore. This field IS NOT case-sensitive.
 
+alternateEncID = Alternate catalog number is:
 alternateID = Alternate ID is or contains
 sightingDates = Sighting dates:
 addedsightingDates = Encounter submission dates:
