--- a/src/main/resources/bundles/en/encounterSearch.properties
+++ b/src/main/resources/bundles/en/encounterSearch.properties
@@ -44,6 +44,7 @@ namesBlank = Leave blank to accept all names in your search. This field IS NOT c
 commentsBlank = Leave blank to ignore. This field IS NOT case-sensitive.
 
 alternateEncID = Alternate catalog number is:
+alternateEncIDHelp = Leave blank to accept all catalog numbers in your search. This field is case-sensitive.
 alternateID = Alternate ID is or contains
 sightingDates = Sighting dates:
 addedsightingDates = Encounter submission dates:
