adapted thumbnailresults for S3 asset store + various

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -117,6 +117,8 @@
                 /api/** = authcBasicWildbook, roles[rest]
                 /rest/** = authcBasicWildbook, roles[rest]
 
+                /submit.jsp = authc
+
 
 			    /RelationshipCreate  = authc, roles[researcher]
 		   /RelationshipDelete  = authc, roles[researcher]
