showUsersToPublic = false in common config
Don't show collaborating researchers on individuals' pages

--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -325,7 +325,7 @@ preservationMethod0=ethanol
 preservationMethod1=frozen
 preservationMethod2=dry stabilized
 
-showUsersToPublic = true
+showUsersToPublic = false
 
 #Manage settings for a user agreement indicating terms of usage for this Wildbook
 showUserAgreement = true
