--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -411,6 +411,19 @@ IBEISIARestUrlGetJobResult = http://52.36.181.189:5000/api/engine/job/result/
 # s3upload_region = CHANGEME
 # s3upload_bucket = CHANGEME
 
+finDetectInstanceId = i-04fbed57be6d86850
+finDetectQueueUrlPriority = https://sqs.eu-west-1.amazonaws.com/822200170788/toDetectPriority.fifo
+finDetectQueueUrl = https://sqs.eu-west-1.amazonaws.com/822200170788/toDetect.fifo
+
+finRefineInstanceId = i-06b0cb47667323295
+spareFinRefineInstanceId = i-095505dbefbc03ca1
+finRefineQueueUrlPriority = https://sqs.eu-west-1.amazonaws.com/822200170788/toRefinePriority.fifo
+finRefineQueueUrl = https://sqs.eu-west-1.amazonaws.com/822200170788/toRefine.fifo
+
+iaPostUrl = http://ec2-34-241-222-21.eu-west-1.compute.amazonaws.com/ia
+
+
+
 
 
 BenWhitesharkJobStartDirectory = /efs/job/start
