--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -64,11 +64,11 @@
                 #only let authenticated users
                 #with the appropriate role
                 #view the web pages in the secure
-                #and admin 
+                #and admin
                 [urls]
 
                 /rest/** = authcBasicWildbook,roles[researcher]
-				#/api/** = authcBasicWildbook,roles[rest-readonly]
+								/api/** = authcBasicWildbook,roles[rest]
                 /LightRest/** = authcBasicWildbook,roles[researcher]
 
 
@@ -151,7 +151,7 @@
        /surveys/createSurvey.jsp = authc, roles[researcher]
        /surveys/surveySearch.jsp = authc, roles[researcher]
        /surveys/surveySearchResults.jsp = authc, roles[researcher]
-       
+
        /SurveyCreate = authc, roles[researcher]
        /SubmitSurvey = authc, roles[researcher]
        /SurveySetObservation = authc, roles[researcher]
@@ -266,7 +266,7 @@
 				 /OccurrenceAddComment = authc, roles[researcher]
 				 /CalendarXMLServer = authc, roles[researcher]
 				 /CalendarXMLServer2 = authc, roles[researcher]
-				 
+
 				 /EncounterSetGenusSpecies = authc, roles[researcher]
 				 #/EncounterSetInformOthers = authc, roles[researcher]
 				 /RestKeyword = authc, roles[researcher]
@@ -312,23 +312,23 @@
 					/SubmitSpotsAndTransformImage = authc,roles[researcher]
 
 					/ResurrectDeletedEncounter = authc,roles[admin]
-					
+
 				/OccurrenceSearchExportMetadataExcel = authc, roles[researcher]
                  /OccurrenceSearchExportGtm = authc, roles[researcher]
-				 
+
 				 /SUTimeServlet = authc, roles[admin]
-				 
+
 				 #lockdown Keyword handling
 				 /appadmin/kwAdmin.jsp = authc, roles[admin]
 				 /KeywordHandler = authc, roles[admin]
-				 				
+
 				/SimpleCMRSpecifySessions.jsp = authc, roles[researcher]
 				/pictureBook.jsp = authc, roles[researcher]
-				
+
 				/ExportWekaPredictorARFF = authc, roles[admin]
-				
+
 				/pictureBook.jsp = authc, roles[researcher]
-				
+
 				/EncounterSetSurveyAndTrack = authc, roles[researcher]
 				/OccurrenceSetSurveyAndTrack = authc, roles[researcher]
 				/EncounterSetGenusSpecies = authc, roles[researcher]
@@ -352,9 +352,9 @@
 				/CRCExportReport = authc, roles[researcher]
 				/DeleteAdoption = authc, roles[adoption]
 			    /IndividualSetSex = authc, roles[researcher]
-				
+
 				/EncounterSetSex = authc, roles[researcher]
-					
+
 				/EncounterSetMaximumDepth = authc, roles[researcher]
 				/EncounterSetMaximumElevation = authc, roles[researcher]
 				/EncounterSetOccurrenceRemarks = authc, roles[researcher]
@@ -386,9 +386,9 @@
 				/sutime/** = authc
 				/EncounterRemoveUser = authc, roles[researcher]
 				/EncounterAddUser = authc, roles[researcher]
-				
+
 				/AnnotationEdit = authc, roles[admin]
-				
+
 				/EncounterSetString = authc
 				/OrganizationEdit = authc, roles[admin]
 				/MergeIndividual = authc
@@ -422,27 +422,27 @@
     <url-pattern>/di/ImgFilter/*</url-pattern>
     <url-pattern>/di/ImgFilter/*</url-pattern>
   </filter-mapping>
-  
+
   <servlet>
     <servlet-name>EncounterRemoveUser</servlet-name>
     <servlet-class>org.ecocean.servlet.EncounterRemoveUser</servlet-class>
   </servlet>
-  
+
       <servlet>
     <servlet-name>EncounterAddUser</servlet-name>
     <servlet-class>org.ecocean.servlet.EncounterAddUser</servlet-class>
   </servlet>
-  
+
       <servlet-mapping>
     <servlet-name>EncounterRemoveUser</servlet-name>
     <url-pattern>/EncounterRemoveUser</url-pattern>
   </servlet-mapping>
-  
+
     <servlet-mapping>
     <servlet-name>EncounterAddUser</servlet-name>
     <url-pattern>/EncounterAddUser</url-pattern>
   </servlet-mapping>
-  
+
   <servlet>
     <description>SubmitSurvey</description>
     <servlet-name>SubmitSurvey</servlet-name>
@@ -484,7 +484,7 @@
   <servlet>
     <servlet-name>EncounterCreateSurvey</servlet-name>
     <servlet-class>org.ecocean.servlet.EncounterCreateSurvey</servlet-class>
-  </servlet>	
+  </servlet>
 
   <servlet>
     <servlet-name>WriteOutScanTask</servlet-name>
@@ -505,12 +505,12 @@
     <servlet-name>IndividualSetAlternateID</servlet-name>
     <servlet-class>org.ecocean.servlet.IndividualSetAlternateID</servlet-class>
   </servlet>
-  
+
   <servlet>
     <servlet-name>EncounterSetSurveyAndTrack</servlet-name>
     <servlet-class>org.ecocean.servlet.EncounterSetSurveyAndTrack</servlet-class>
   </servlet>
-  
+
   <servlet>
     <servlet-name>OccurrenceSetSurveyAndTrack</servlet-name>
     <servlet-class>org.ecocean.servlet.OccurrenceSetSurveyAndTrack</servlet-class>
@@ -691,7 +691,7 @@
     <servlet-class>org.ecocean.servlet.EncounterSetAsUnidentifiable</servlet-class>
   </servlet>
 -->
-  
+
 
 
 
@@ -725,7 +725,7 @@
 		<servlet-name>ResumableUpload</servlet-name>
 		<servlet-class>org.ecocean.resumableupload.UploadServlet</servlet-class>
 	</servlet>
-	
+
 	<servlet>
 		<servlet-name>SurveyCreate</servlet-name>
 		<servlet-class>org.ecocean.servlet.SurveyCreate</servlet-class>
@@ -735,7 +735,7 @@
 		<servlet-name>AddOccToTrack</servlet-name>
 		<servlet-class>org.ecocean.servlet.AddOccToTrack</servlet-class>
 	</servlet>
-	
+
 	<servlet-mapping>
  		<servlet-name>ResumableUpload</servlet-name>
 		<url-pattern>/ResumableUpload</url-pattern>
@@ -1084,7 +1084,7 @@
     <servlet-class>org.ecocean.servlet.SideFeed</servlet-class>
   </servlet>
 -->
-  
+
   <servlet>
     <servlet-name>EncounterRemoveImage</servlet-name>
     <servlet-class>org.ecocean.servlet.EncounterRemoveImage</servlet-class>
@@ -1183,7 +1183,7 @@
     <servlet-name>EncounterRemoveSpots</servlet-name>
     <servlet-class>org.ecocean.servlet.EncounterRemoveSpots</servlet-class>
   </servlet>
-  
+
 <!--
       <servlet>
            <servlet-name>MozPradel</servlet-name>
@@ -1223,7 +1223,7 @@
       <servlet-class>org.ecocean.servlet.NingalooByMonthsSonification</servlet-class>
   </servlet>
 -->
-  
+
   <servlet>
     <servlet-name>EncounterAddComment</servlet-name>
     <servlet-class>org.ecocean.servlet.EncounterAddComment</servlet-class>
@@ -1341,7 +1341,7 @@
     <servlet-name>EncounterSetLivingStatus</servlet-name>
     <servlet-class>org.ecocean.servlet.EncounterSetLivingStatus</servlet-class>
   </servlet>
-    
+
   <!--
   <servlet>
     <servlet-name>EncounterAddImage</servlet-name>
@@ -1467,12 +1467,12 @@
       <url-pattern>/SideFeed</url-pattern>
   </servlet-mapping>
   -->
-  
+
     <servlet>
     <servlet-name>ExportWekaPredictorARFF</servlet-name>
     <servlet-class>org.ecocean.ai.servlet.export.ExportWekaPredictorARFF</servlet-class>
   </servlet>
-  
+
     <servlet-mapping>
     <servlet-name>ExportWekaPredictorARFF</servlet-name>
     <url-pattern>/ExportWekaPredictorARFF</url-pattern>
@@ -1521,7 +1521,7 @@
     <servlet-name>OccurrenceClusterMASet</servlet-name>
     <servlet-class>org.ecocean.servlet.OccurrenceClusterMASet</servlet-class>
   </servlet>
-  
+
   <servlet>
     <servlet-name>OccurrenceSetObservation</servlet-name>
     <servlet-class>org.ecocean.servlet.OccurrenceSetObservation</servlet-class>
@@ -1531,12 +1531,12 @@
     <servlet-name>EncounterSetObservation</servlet-name>
     <servlet-class>org.ecocean.servlet.EncounterSetObservation</servlet-class>
   </servlet>
-  
+
   <servlet>
     <servlet-name>SurveySetObservation</servlet-name>
     <servlet-class>org.ecocean.servlet.SurveySetObservation</servlet-class>
   </servlet>
-  
+
     <servlet>
     <servlet-name>OccurrenceSearchExportMetadataExcel</servlet-name>
     <servlet-class>org.ecocean.servlet.export.OccurrenceSearchExportMetadataExcel</servlet-class>
@@ -1545,19 +1545,19 @@
     <servlet-name>OccurrenceSearchExportGtm</servlet-name>
     <servlet-class>org.ecocean.servlet.export.OccurrenceSearchExportGtm</servlet-class>
   </servlet>
-  
+
   <!--SUTime testing-->
         <servlet>
         <servlet-name>SUTimeServlet</servlet-name>
         <servlet-class>org.ecocean.servlet.SUTimeServlet</servlet-class>
   </servlet>
-  
+
       <servlet-mapping>
     <servlet-name>SUTimeServlet</servlet-name>
     <url-pattern>/SUTimeServlet</url-pattern>
   </servlet-mapping>
-  
-  
+
+
     <servlet-mapping>
     <servlet-name>OccurrenceSearchExportGtm</servlet-name>
     <url-pattern>/OccurrenceSearchExportGtm</url-pattern>
@@ -1577,9 +1577,9 @@
 <servlet-mapping>
   <servlet-name>SubmitSurvey</servlet-name>
   <url-pattern>/SubmitSurvey</url-pattern>
-</servlet-mapping>  
-  
-<servlet-mapping> 
+</servlet-mapping>
+
+<servlet-mapping>
   <servlet-name>CRCExportReport</servlet-name>
   <url-pattern>/CRCExportReport</url-pattern>
 </servlet-mapping>
@@ -1658,7 +1658,7 @@
         <servlet-name>TissueSampleSetSexAnalysis</servlet-name>
         <url-pattern>/TissueSampleSetSexAnalysis</url-pattern>
   </servlet-mapping>
-  
+
 
 
       <servlet-mapping>
@@ -1753,12 +1753,12 @@
           <servlet-name>TissueSampleRemoveMicrosatelliteMarkers</servlet-name>
           <url-pattern>/TissueSampleRemoveMicrosatelliteMarkers</url-pattern>
   </servlet-mapping>
-  
+
   <servlet-mapping>
       <servlet-name>EncounterSetSurveyAndTrack</servlet-name>
       <url-pattern>/EncounterSetSurveyAndTrack</url-pattern>
   </servlet-mapping>
-  
+
   <servlet-mapping>
       <servlet-name>OccurrenceSetSurveyAndTrack</servlet-name>
       <url-pattern>/OccurrenceSetSurveyAndTrack</url-pattern>
@@ -1963,8 +1963,8 @@
     <url-pattern>/EncounterSetAsUnidentifiable</url-pattern>
   </servlet-mapping>
 -->
-  
-  
+
+
     <servlet-mapping>
       <servlet-name>EncounterSearchExportGeneGISFormat</servlet-name>
       <url-pattern>/EncounterSearchExportGeneGISFormat</url-pattern>
@@ -2049,7 +2049,7 @@
     <servlet-name>EncounterRemoveSpots</servlet-name>
     <url-pattern>/EncounterRemoveSpots</url-pattern>
   </servlet-mapping>
-    
+
   <servlet-mapping>
     <servlet-name>RelationshipCreate</servlet-name>
     <url-pattern>/RelationshipCreate</url-pattern>
@@ -2119,7 +2119,7 @@
       <url-pattern>/OccurrenceAddEncounter</url-pattern>
   </servlet-mapping>
 
-  
+
   <!--
 	<servlet-mapping>
 		<servlet-name>EncounterSetPatterningPassport</servlet-name>
@@ -2204,7 +2204,7 @@
     <servlet-name>EncounterSetScarring</servlet-name>
     <url-pattern>/EncounterSetScarring</url-pattern>
   </servlet-mapping>
-  
+
   <servlet-mapping>
       <servlet-name>EncounterSetState</servlet-name>
       <url-pattern>/EncounterSetState</url-pattern>
@@ -2396,7 +2396,7 @@
     <url-pattern>/ScanResultsServlet</url-pattern>
   </servlet-mapping>
 
- 
+
 
   <!--
   <servlet-mapping>
@@ -2450,12 +2450,12 @@
     <servlet-name>OccurrenceSetObservation</servlet-name>
     <url-pattern>/OccurrenceSetObservation</url-pattern>
   </servlet-mapping>
-  
+
   <servlet-mapping>
     <servlet-name>SurveySetObservation</servlet-name>
     <url-pattern>/SurveySetObservation</url-pattern>
   </servlet-mapping>
-  
+
   <servlet-mapping>
     <servlet-name>SurveyCreate</servlet-name>
     <url-pattern>/SurveyCreate</url-pattern>
