--- a/src/main/resources/bundles/jdoconfig.properties
+++ b/src/main/resources/bundles/jdoconfig.properties
@@ -27,12 +27,12 @@
 # The following lines can be used for PostgreSQL data storage.
 # You will also need to add the JDBC JAR file for your PostgreSQL version to /WEB-INF/lib.
 datanucleus.ConnectionDriverName=org.postgresql.Driver
-datanucleus.ConnectionURL = jdbc:postgresql://localhost:5432/wildbook
+datanucleus.ConnectionURL = jdbc:postgresql://localhost:5432/wildbook7
 
 
 javax.jdo.PersistenceManagerFactoryClass = org.datanucleus.api.jdo.JDOPersistenceManagerFactory
-datanucleus.ConnectionUserName = wildbook              
-datanucleus.ConnectionPassword = wildbook
+datanucleus.ConnectionUserName = shepherd7
+datanucleus.ConnectionPassword = shepherd7
 datanucleus.schema.autoCreateAll = true
 #datanucleus.generateSchema.database.mode = create
 datanucleus.NontransactionalRead = true
@@ -60,4 +60,3 @@ datanucleus.connectionPool.timeBetweenEvictionRunsMillis=240000
 #datanucleus.connectionPool.maxIdle=10
 #datanucleus.connectionPool.leakThreshold=1
 #datanucleus.connectionPool.maxLifetime=1800000
-
