--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -23,12 +23,14 @@
 
 
 #file system folder in which marked individual data will be stored (e.g. data files)
-#markedIndividualDirectoryLocation=individuals 
+#markedIndividualDirectoryLocation=individuals
 
 #file system folder in which adoption data will be stored (e.g. photos)
 #adoptionLocation=adoptions
 
 dataDirectoryName = wildbook_data_dir
+
+useWSIA = true
 
 #URL to the graphic to be displayed at the top of every page through header.jsp
 urlToMastheadGraphic=images/masthead.jpg
@@ -475,4 +477,3 @@ containerName=
 
 ####  you *must* have a (safe) importDir (absolute path) defined to use the StandardImport functionality
 #importDir=/some/path/here
-
